hack/windows/export-golden-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: export-golden-image
  namespace: shalb-dev
  labels:
    app: golden-image-export
spec:
  restartPolicy: Never
  containers:
    - name: exporter
      image: ubuntu:22.04
      command: ["sh", "-c"]
      args:
        - |
          [...]
      volumeMounts:
        - name: golden-disk
          mountPath: /pvc
      resources:
        requests:
          memory: "2Gi"
          cpu: "1"
        limits:
          memory: "4Gi"
          cpu: "2"
  volumes:
    - name: golden-disk
      persistentVolumeClaim:
        claimName: windows11-disk
